# module-utilities

./: .buildinfo  .buildinfo.bak  .copier-answers.yml  .cruft.json  .gitignore  .noxconfig.example.toml  .pre-commit-config.yaml  .pylintrc.toml  .recipe-append.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  authors.html  changelog.html  conftest.py  contributing.html  environment.yaml  genindex.html  index.html  installation.html  justfile  license.html  navigation.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
_sources/: installation.md
_sources/examples/: example-usage-1.md  example-usage-1.rst  example-usage.md  index.md
_sources/examples/usage/: cached.ipynb  docfiller.ipynb
_sources/reference/: index.md
_static/: documentation_options.js
changelog.d/: 20230501_224917_william.krekelberg_cleanup_docfiller.md  20230502_220036_william.krekelberg_update_cruft.md  20230503_131922_william.krekelberg_update_docfiller.md  20230614_164727_william.krekelberg_update_cruft.md  20230710_122009_william.krekelberg.md  20230801_103529_william.krekelberg_update_cruft.md  20230815_125019_william.krekelberg_rework_cached.md  20230821_184111_william.krekelberg.md  20230822_212438_william.krekelberg_more_robust_cached_meth.md  20250123_103525_william.krekelberg.md  20250721_144606_wpk_update_cruft.md
config/: recipe-append.yaml
docs/: conf.py  installation.md
docs/examples/: example-usage-1.rst  example-usage.md  index.md
docs/examples/usage/: cached.ipynb  demo.ipynb  docfiller.ipynb
docs/reference/: index.md
environment/: base.yaml  dev.yaml  docs.yaml  lint-extras.yaml  lint.yaml  py310-dev-base.yaml  py310-dev-complete.yaml  py310-dev.yaml  py310-docs.yaml  py310-test-extras.yaml  py310-test-noopt.yaml  py310-test.yaml  py310-typing.yaml  py311-test-extras.yaml  py311-test-noopt.yaml  py311-test.yaml  py311-typing.yaml  py38-test-extras.yaml  py38-test-noopt.yaml  py38-test.yaml  py38-typing.yaml  py39-test-extras.yaml  py39-test-noopt.yaml  py39-test.yaml  py39-typing.yaml  test-extras.txt  test.yaml  typing.yaml
environment/lock/: py310-dev-conda-lock.yml  py310-dist-conda-conda-lock.yml  py310-dist-pypi-conda-lock.yml  py310-test-conda-lock.yml  py310-typing-conda-lock.yml  py311-test-conda-lock.yml  py311-typing-conda-lock.yml  py38-test-conda-lock.yml  py38-typing-conda-lock.yml  py39-test-conda-lock.yml  py39-typing-conda-lock.yml
examples/: example-usage-1.html  example-usage.html  index.html
examples/usage/: cached.html  cached.ipynb  docfiller.html  docfiller.ipynb
reference/: index.html
requirements/: dev-base.txt  dev-complete.txt  dev.txt  docs.txt  pipxrun-tools.txt  py310-dev-base.yaml  py310-dev-complete.yaml  py310-docs.yaml  py310-test-extras.yaml  py310-test-noopt.yaml  py310-test.yaml  py310-typing.yaml  py311-dev-base.yaml  py311-dev-complete.yaml  py311-dev.yaml  py311-docs.yaml  py311-test-extras.yaml  py311-test-noopt.yaml  py311-test-notebook.yaml  py311-test.yaml  py311-typing-notebook.yaml  py311-typing.yaml  py312-dev.yaml  py312-test-extras.yaml  py312-test.yaml  py312-typing.yaml  py313-dev.yaml  py313-test-extras.yaml  py313-test.yaml  py313-typing.yaml  py314-dev.yaml  py314-test-extras.yaml  py314-test.yaml  py38-test-extras.yaml  py38-test-noopt.yaml  py38-test.yaml  py38-typing.yaml  py39-test-extras.yaml  py39-test-noopt.yaml  py39-test.yaml  (+8 more)
requirements/lock/: py310-test.txt  py310-test.txt.hash.json  py310-typing.txt  py311-dev-base.txt  py311-dev-base.txt.hash.json  py311-dev-complete.txt  py311-dev-complete.txt.hash.json  py311-dev.txt  py311-dev.txt.hash.json  py311-docs.txt  py311-docs.txt.hash.json  py311-pipxrun-tools.txt.hash.json  py311-test-noopt.txt  py311-test-noopt.txt.hash.json  py311-test-notebook.txt  py311-test-notebook.txt.hash.json  py311-test.txt  py311-test.txt.hash.json  py311-typing-notebook.txt  py311-typing-notebook.txt.hash.json  py311-typing.txt  py311-typing.txt.hash.json  py312-test.txt  py312-typing.txt  py312-typing.txt.hash.json  py313-test.txt  py313-typing.txt  py38-test.txt  py38-typing.txt  py38-typing.txt.hash.json  py39-test.txt  py39-typing.txt  uvx-tools.txt
scripts/: dist-conda.mk
src/module_utilities/: __init__.py  _doc.py  _typing.py  _typing_compat.py  attributedict.py  cached.py  core.py  docfiller.py  docinherit.py  options.py  typing.py
tests/: __init__.py  test_attributedict.py  test_cached.py  test_cached_attrs_dataclass.py  test_cached_subclass_typing.py  test_cached_subclass_typing_2.py  test_cached_subclassing_covariant.py  test_docfiller.py  test_inherit.py  test_module_utilities.py  test_smoke.py  test_typing.py
tools/: noxtools.py  shared.just
