[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.8.22,<0.9.0",
]

[project]
name = "module-utilities"
version = "0.11.1.dev0"
description = "Collection of utilities to aid working with python modules."
readme = "README.md"
keywords = [
    "module-utilities",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "typing-extensions; python_version<'3.11'",
]
optional-dependencies.all = [
    "module-utilities[inherit]",
]
optional-dependencies.inherit = [
    "docstring-inheritance",
]
urls.Documentation = "https://pages.nist.gov/module-utilities/"
urls.Homepage = "https://github.com/usnistgov/module-utilities"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "notebook" },
    { include-group = "nox" },
    { include-group = "pytest-accept" },
    { include-group = "test-notebook" },
    { include-group = "typecheck" },
]
test = [
    { include-group = "optional" },
    { include-group = "test-noopt" },
]
docs = [
    "autodocsumm",
    "myst-nb",
    "pyenchant",
    "sphinx>=5.3.0",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinxcontrib-spelling",
    { include-group = "optional" },
]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
# other packages/tools
ipython = [ "ipython" ]
mypy = [ "mypy>=1.15.0", "orjson" ]
notebook = [ "ipykernel", "nbclient" ]
nox = [ "nox>=2025.5.1" ]
# other environments
optional = [ "module-utilities[all]" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
pytest-accept = [ "pytest-accept" ]
test-extras = [
    { include-group = "test" },
]
test-noopt = [
    "attrs",
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-sugar",
    "pytest-xdist",
    { include-group = "pytest" },
]
test-notebook = [
    "nbval",
    { include-group = "test" },
]
typecheck = [
    "attrs",
    { include-group = "optional" },
    { include-group = "pylint" },
    { include-group = "pytest" },
]

# * uv -------------------------------------------------------------------------

[tool.uv]
required-version = ">=0.7.15"
default-groups = [ "dev" ]
dependency-groups.dev.requires-python = ">=3.14"
dependency-groups.docs-live.requires-python = ">=3.14"
dependency-groups.docs-spelling.requires-python = ">=3.14"
dependency-groups.docs.requires-python = ">=3.14"
# other tools
dependency-groups.ipython.requires-python = ">=3.14"
dependency-groups.mypy.requires-python = ">=3.14"
dependency-groups.notebook.requires-python = ">=3.14"
dependency-groups.nox.requires-python = ">=3.14"
fork-strategy = "requires-python"
managed = true
build-backend.source-include = [ "tests/**" ]
pip.annotation-style = "line"
pip.generate-hashes = true

# * Checks ---------------------------------------------------------------------

[tool.repo-review]
ignore = [
    "GH",     # enable for actions
    "PC140",  # do this externally
    "PC170",  # pygrep
    "PC901",  # ci message
    "RTD",
    "NOX103", # I prefer using "nox.options.sessions"
]

[tool.check-wheel-contents]
toplevel = [ "module_utilities" ]
src_dir = [ "src" ]

[tool.pyproject-fmt]

[tool.pytest]
# max_supported_python = "3.13"

# * Testing --------------------------------------------------------------------

ini_options.addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--doctest-modules",
    "--doctest-glob=*.md",
    "--pyargs",
    "--cov-config=pyproject.toml",
]
ini_options.testpaths = [
    "README.md",
    "module_utilities",
    "tests",
]
ini_options.markers = [
    "inherit: docstring_inheritance dependent code",
]
ini_options.minversion = "8"
ini_options.log_cli_level = "INFO"
ini_options.xfail_strict = true
ini_options.filterwarnings = [ "error" ]

[tool.pytest_env]
DOCSTRING_INHERITANCE_ENABLE = { value = "1", skip_if_set = true }

[tool.coverage]
run.branch = true
paths.source = [
    "src/",
    ".nox/**/site-packages/",
]
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    "*/_typing.py",
    "*/vendored/*",
]
report.show_missing = true

# * typecheck ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src/**/*.py",
    "tests/**/*.py",
]
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
exclude = [
    ".eggs",
    ".tox",
    ".nox",
    ".venv",
    ".numba_cache",
    "docs",
]
check_untyped_defs = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
overrides = [
    # [[tool.mypy.overrides]]
    # ignore_missing_imports = true
    # module = [  ]
    { ignore_errors = true, module = [
        "module_utilities.vendored.docscrape",
    ] },
]

[tool.pyright]
include = [
    "src",
    "tests",
]
exclude = [
    "**/__pycache__",
    ".tox/**",
    ".nox/**",
    "envs/**",
    "**/.mypy_cache",
    "**/.numba_cache",
    "src/module_utilities/vendored",
]
pythonVersion = "3.11"
typeCheckingMode = "standard"
strict = [
    "src",
    "noxfile.py",
    "tools/*.py",
]
reportDuplicateImport = true
reportInvalidStubStatement = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
reportUnusedImport = true
# Extra flags
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"
dependencies.pytest-accept = { pip = true }
envs.dev.groups = "dev"
envs.test.groups = "test"
envs.test.python = "all"
envs.test-extras.groups = "test-extras"
envs.test-extras.python = "all"
envs.test-extras.skip-package = true
envs.uvx-tools.reqs = [
    # these used solely for specking tools to be used with uvx ...
    "conda-lock>=2.5.5",
    "cruft",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pre-commit>=4.0.0",
    "pre-commit-uv",
    "prek",
    "pyrefly>=0.37.0",
    "pyright>=1.1.392",
    "basedpyright>=1.31.3",
    "scriv",
    "twine>=5.0.0",
    "ty",
]
envs.uvx-tools.groups = [
    "mypy",
    "nox",
]
envs.uvx-tools.skip-package = true
envs.uvx-tools.style = "requirements"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]
